<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Guess The Word</string>
    <string name="play_now" translatable="false">Play Now</string>
    <string name="play" translatable="false">Play</string>
    <string name="save_progress" translatable="false">Save Your Progress</string>
    <string name="log_in" translatable="false">Log in to your GDW account</string>
    <string name="forgot_your_password" translatable="false">FORGOT<br>YOUR PASSWORD?</br></string>
    <string name="not_to_worry" translatable="false">Not to worry, we got you! Let’s get you a new password.</string>
    <string name="leaderboard" translatable="false">Leaderboard</string>
    <string name="onlyor" translatable="false">OR</string>
    <string name="log_in_button" translatable="false">Login</string>
    <string name="set_password" translatable="false">Set Password</string>
    <string name="full_name" translatable="false">Full Name</string>
    <string name="yob" translatable="false">Year of Birth</string>
    <string name="password" translatable="false">Password</string>
    <string name="confirmedpassword" translatable="false">Confirm Password</string>
    <string name="don_t_have_an_account" translatable="false">Don\'t have an account?</string>
    <string name="register_button" translatable="false">Create My Account</string>
    <string name="register_register" translatable="false">Create your GDW account</string>
    <string name="enteryourname" translatable="false">Enter your Name</string>
    <string name="validemail" translatable="false">Enter a valid email address</string>
    <string name="validpassword" translatable="false">Between 6 and 12 alphanumeric characters</string>
    <string name="privacypolicy" translatable="false">Privacy policy</string>
    <string name="forgot_password" translatable="false">FORGOT PASSWORD, HUH?</string>
    <string name="back_to_menu" translatable="false">BACK TO THE MENU</string>
    <string name="title_activity_sign_up" translatable="false">SignUp</string>
    <string name="OK" translatable="false">OK</string>
    <string name="orloginusing" translatable="false">Or login using</string>
    <string name="orlogupusing" translatable="false">Or log up using</string>
    <string name="aboutyou" translatable="false">About You</string>
    <string name="email" translatable="false">Email</string>
    <string name="gtw" translatable="false">Guest The Word</string>
    <string name="or" translatable="false">Or</string>
    <string name="level_13" translatable="false">Level 13</string>
    <string name="_10000" translatable="false">10000</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="coin" translatable="false">Coin</string>
    <string name="b" translatable="false">B</string>
    <string name="c" translatable="false">C</string>
    <string name="o" translatable="false">O</string>
    <string name="h" translatable="false">H</string>
    <string name="i" translatable="false">I</string>
    <string name="a" translatable="false">A</string>
    <string name="u" translatable="false">U</string>
    <string name="p" translatable="false">P</string>
    <string name="l" translatable="false">L</string>
    <string name="v" translatable="false">V</string>
    <string name="m" translatable="false">M</string>
    <string name="d" translatable="false">D</string>
    <string name="register_login" translatable="false">NOT HAVE A GDW ACCOUNT? REGISTER NOW</string>
    <string name="login_register" translatable="false">ALREADY HAVE AN ACCOUNT? LOGIN NOW</string>
    <string name="highestScore" translatable="false">16516</string>
    <string name="achievement" translatable="false">Achievement</string>
    <string name="achi_title" translatable="false">Achievement Title</string>
    <string name="updateprofile" translatable="false">Update Profile</string>
    <string name="changepass" translatable="false">CHANGE PASSWORD</string>
    <string name="logout" translatable="false">Log out</string>
    <string name="dob">Date of birth</string>
    <string name="update">Update</string>
    <string name="title_edit_profile">Update your current profile</string>
    <string name="resetpass">Reset password</string>
    <string name="profile" translatable="false">Profile</string>
    <string name="update_profile">Update profile</string>
    <string name="change_password">Change password</string>
    <string name="how_to_play">How To Play</string>
    <string name="language_eng">ENG</string>
    <string name="language_vn">VN</string>
    <string name="tobecontinue">Continue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="h2p_text">See the suggested image and choose the letters that can make a combination to give out the correct answer</string>
    <string name="img_h2p">img_h2p</string>
    <string name="btn_h2p_next_text">NEXT</string>
    <string name="reset_the_question">Reset the question</string>
    <string name="show_one_letter">Show one letter</string>
    <string name="change_question">Change question</string>
    <string name="txt_h2p_second_txt">Whenever you got stucked in any level, these powerful hints will be here to help you.</string>
    <string name="avatartitle">AVATAR</string>
    <string name="loading_please_wait">Loading please wait</string>
</resources>