<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_maincolor"
    android:fadingEdge="horizontal">

    <!-- User will play the game as Guest -->

    <!-- User will be direted to activity_log_in layout -->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login_home"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:background="@drawable/rectmenu"
        android:onClick="loginIntent"
        android:text="@string/log_in"
        android:textSize="@dimen/textsize_19"
        app:layout_constraintBottom_toTopOf="@+id/id_Main_Guideline_4"
        app:layout_constraintEnd_toStartOf="@+id/id_Main_Guideline_2"
        app:layout_constraintStart_toStartOf="@+id/id_Main_Guideline_1"
        app:layout_constraintTop_toBottomOf="@+id/btn_play_now"
        app:layout_constraintVertical_bias="0.212" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_play_now"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/rectmenu"
        android:onClick="playGameIntent"
        android:text="@string/play_now"
        android:textSize="@dimen/textsize_19"
        app:layout_constraintEnd_toStartOf="@+id/id_Main_Guideline_2"
        app:layout_constraintStart_toStartOf="@+id/id_Main_Guideline_1"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="285dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/logo_temp"
        app:layout_constraintEnd_toStartOf="@+id/id_Main_Guideline_2"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="@+id/id_Main_Guideline_1"
        app:layout_constraintTop_toTopOf="@+id/id_Main_Guideline_3" />

    <!-- The id_Main_Guideline_1 is used to limit the left space where items are being place inside -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/id_Main_Guideline_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <!-- The id_Main_Guideline_2 is used to limit the right space where items are being place inside -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/id_Main_Guideline_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <!-- The id_Main_Guideline_3 is used to limit the top space where items are being place inside -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/id_Main_Guideline_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05"/>

    <!-- The id_Main_Guideline_4 is used to limit the bottom space where items are being place inside -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/id_Main_Guideline_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <Button
        android:id="@+id/button"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:onClick="profileIntent"
        android:text="@string/profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btn_login_home" />


    <!-- Will put the logo in here -->

</androidx.constraintlayout.widget.ConstraintLayout>